--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 
     <modules>
         <module>pocket-core</module>
+        <module>pocket-redis</module>
     </modules>
 
     <dependencyManagement>
@@ -37,6 +38,13 @@
                 <groupId>cn.gotz9</groupId>
                 <artifactId>pocket-core</artifactId>
                 <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>3.4.1</version>
+                <type>jar</type>
+                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
